--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Homepage</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+    <title>React Application</title>
 </head>
+
 <body>
-  <h1>Homepage</h1>
+    <noscript>Client - You need to enable JavaScript to run this app.</noscript>
+    <div id="app"></div>
 </body>
 </html>
